--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss-px2rem": "^0.3.0",
     "swiper": "^6.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
