--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.20",
+    "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^6.2.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
