--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^6.2.0",
+    "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.4.3",
