--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -18,6 +19,7 @@
     "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-i18n": "^8.17.3",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
@@ -30,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
