--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.20",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^6.2.0",
     "vee-validate": "^3.3.9",
