--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.0.3",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
