--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-<<<<<<< HEAD
 node_modules
-=======
 .DS_Store
 node_modules
 /dist
@@ -25,4 +23,4 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
->>>>>>> my
+otherPic
