--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.7",
     "request": "^2.88.0",
-    "svg-captcha": "^1.3.11"
+    "svg-captcha": "^1.3.11",
+    "vue": "^2.6.12"
   }
 }
